--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@react-three/drei": "^9.74.3",
+    "@react-three/fiber": "^8.13.7",
+    "@react-three/postprocessing": "^3.0.4",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.4",
     "react": "^18.3.1",
@@ -19,7 +22,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "smooth-scrollbar": "^8.8.4",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "three": "^0.150.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
