added Email Service

--- a/public/data/settings.json
+++ b/public/data/settings.json
@@ -55,10 +55,10 @@
       }
     ],
   
-    "emailjs": {
-      "publicKey": "tzObcsmOwHvPy6Rhp",
-      "serviceId": "service_4h8g7vb",
-      "templateId": "template_seyjkzn"
+   "emailjs": {
+      "publicKey": "K_WbHLadi7xwnyUl7",
+      "serviceId": "service_v97xjsk",
+      "templateId": "template_x7cvpvj"
     }
   }
   
